# text-mate-backend

./: .dockerignore  .env.azure.schema  .env.example  .env.schema  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_USAGE.md  Dockerfile  Makefile  README.md  ZID_BS_RootCA.crt  docker-compose.yml  entrypoint.sh  publiccode.yml  pyproject.toml  renovate.json  run.sh  sample_data.txt
.github/scripts/: bump-version.sh
.github/workflows/: build-api.yml  build-languagetool.yml  docker-publish.yml  main.yml  releases.yml
.opencode/plans/: advisor-improvements.md
assets/actions/: goblin.md  middleage-slang.md
assets/docs/meta/: bund_dokumente.json
assets/docs/ruels2/: empfehlungen-anglizismen-maerz-2020.json
assets/docs/rules/: bundeskanzlei.json  empfehlungen-anglizismen-maerz-2020.json  geschlechtergerechte_sprache.json  leitfaden_geschlechtergerechte_sprache_3aufl.json  merkblatt_behoerdenbriefe.json  rechtschreibleitfaden-2017.json  schreibweisungen.json
docker/languagetool/: Dockerfile  download_ngrams.sh  entrypoint.sh  logback.xml
docs/: docs.json  ruels.json  rules.json
docs/meta/: bund_dokumente.json
docs/rules/: anglizismen.json  leitfaden_geschlechtergerechte_sprache_3aufl.json  rechtschreibleitfaden-2017.json  schreibweisungen.json
scripts/: run-varlock.sh
src/text-mate-backend/: app.py  run.py
src/text-mate-backend/models/: language_tool_models.py  text_corretion_models.py  text_rewrite_models.py
src/text-mate-backend/services/: advisor.py  rewrite_text.py  text_correction_dspy.py  text_correction_language_tool.py
src/text-mate-backend/services/actions/: action_utils.py  bullet_points_action.py  quick_action_service.py  shorten_action.py  simplify_action.py  social_media_action.py  summarize_action.py
src/text-mate-backend/utils/: configuration.py  load_env.py  logger.py
src/text_mate_backend/: app.py  container.py  custom_vlmm.py  index_test.py
src/text_mate_backend/agents/: __init__.py  agent_utils.py  base.py  factory.py  postprocessing.py  replace_eszett.py  run_agent.py
src/text_mate_backend/agents/agent_types/: __init__.py  advisor_agent.py  bullet_point_agent.py  custom_agent.py  formality_agent.py  plain_language_agent.py  rewrite_agent.py  sentence_rewrite_agent.py  social_media_agent.py  summarize_agent.py  word_synonym_agent.py
src/text_mate_backend/agents/agent_types/quick_actions/: __init__.py  bullet_point_agent.py  character_speech_agent.py  custom_agent.py  formality_agent.py  medium_agent.py  plain_language_agent.py  proof_read_agent.py  quick_action_base_agent.py  social_media_agent.py  summarize_agent.py  user_action_agent.py
src/text_mate_backend/agents/debugging/: agent_debugger.py  event_debugger.py
src/text_mate_backend/agents/validators/: __init__.py  eszett_validator.py  text_trimmer.py
src/text_mate_backend/customLLMs/: gemma3.py  qwen3.py
src/text_mate_backend/middlewares/: jwt_auth_middleware.py
src/text_mate_backend/models/: conversion_result.py  docling_response.py  error_codes.py  error_response.py  language_tool_models.py  output_models.py  quick_actions_models.py  ruel_models.py  rule_models.py  sentence_rewrite_model.py  text_analysis_models.py  text_corretion_models.py  text_rewrite_models.py  user_action_models.py  word_synonym_models.py
src/text_mate_backend/routers/: advisor.py  convert_route.py  quick_action.py  sentence_rewrite.py  text_analysis.py  text_correction.py  text_rewrite.py  user_action_route.py  utils.py  word_synonym.py
src/text_mate_backend/services/: advisor.py  azure_entra_service.py  azure_service.py  document_conversion_service.py  dspy_facade.py  language_tool_service.py  llm_facade.py  pydantic_ai_facade.py  rewrite_text.py  sentence_rewrite_service.py  text_analysis_service.py  text_correction_dspy.py  text_correction_language_tool.py  user_actions_service.py  word_synonym_service.py
src/text_mate_backend/services/actions/: action_utils.py  bullet_points_action.py  custom_action.py  easy_language_action.py  formality_action.py  medium_action.py  plain_language_action.py  quick_action_service.py  rewrite_action.py  shorten_action.py  simplify_action.py  social_media_action.py  structure_action.py  summarize_action.py  translate_action.py
src/text_mate_backend/utils/: auth.py  auth_settings.py  cancel_on_disconnect.py  configuration.py  easy_language.py  emails.py  house_style.py  load_env.py  logger.py  middleware.py  offical_letter.py  usage_tracking.py
src/text_mate_tools/: analyse_ruels.py  analyse_rules.py  count_rules_per_file.py  preprocess_document_ruels.py  preprocess_document_rules.py
tests/: conftest.py  test_text_correction_service.py  test_text_rewrite_service.py
